fixed-shifts-page

--- a/src/components/Workernavbar.css
+++ b/src/components/Workernavbar.css
@@ -33,7 +33,7 @@
 a {
   text-decoration: none;
 }
-.object-nav:before {
+/* .object-nav:before {
   position: absolute;
   top: 0;
   left: 0;
@@ -43,7 +43,7 @@ a {
   background: white;
   opacity: 0.2;
   transition: 0.6s;
-}
+} */
 .object-nav:after {
   position: absolute;
   right: 0;
@@ -55,13 +55,14 @@ a {
   opacity: 0.2;
   transition: 0.6s;
 }
-.object-nav:hover::before {
+/* .object-nav:hover::before {
   opacity: 1;
   width: 100%;
-}
+} */
 .object-nav:hover::after {
   opacity: 1;
   width: 100%;
+  left: 0;
 }
 img {
   width: 80px;
